[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-plus"
version = "0.1.0"
description = "Sudoku generator, solver, validator, and CLI (9x9 & 4x4)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Max Base"}, {name="ChatGPT Assistant"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment :: Puzzle Games",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
sudoku = "sudoku_plus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
