[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-plus"
version = "1.0.0"
description = "Sudoku generator, solver, and validator in Python"
authors = [
    { name = "BaseMax", email = "maxbasecode@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/BaseMax/SudokuPython"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sudoku = "sudoku_plus.cli:main"
